Pressure tab: Fixed: Align the "Grid" and "Ruler" Check boxes/text.  the Grid one should be moved right.
# 0.00.49 (63149) Apr 6, 2012
Pressure tab: Chamber scene: Fixed: Don't show dotted line on top of the mass if just removed
Pressure tab: Chamber scene: Added space between the masses
Pressure tab: Chamber scene: Tweak the masses so they don't protrude into the lower left chamber, while still showing a good variation for pressure and displaced fluid height
Pressure tab: Chamber scene: Make the opening taller so blocks don't protrude into the lower left chamber
Pressure tab: Trapezoid scene: Improved the drain faucet
Pressure tab: Added grid for scenes 2-3
Pressure tab: Fixed: Fluid Density slider has english/metric mixed up
For pascals, don’t show any decimal places because it already has enough precision
# 0.00.48 (63126) Apr 5, 2012
Pressure tab: Intro scene: Fixed: gravity not accounted for in 1st tab physics
Hide the speedometer needle when NaN
Made top-center be 1.0 atm for the pressure sensor
Fixed: There is extra space on the sensor toolbox
Fixed: Pressure sensor not centered
Pressure tab: Fixed: Sim freezes with using pressure sensor in 2nd tab
Pressure tab: Added needle pressure gauges
Pressure tab: Chamber scene: Fixed: There is a quirk in the water level when adding a second block, may be leading to incorrect pressure values
Pressure tab: Added a ruler icon
Pressure tab: Intro scene: Fixed grid lines width
Pressure tab: Intro scene: Moved grid check box to the left side of pool
Pressure tab: Disabled grid check box for scenes 2-3
Pressure tab: Fluid density and gravity controls too close together and no insets
Pressure tab: Chamber scene: Show object weights on the objects in Newtons
Pressure tab: Trapezoid scene: Fixed: drain water doesn't flow very far--you can see it cut off if you change the screen aspect ratio
Pressure tab: Trapezoid scene: Added a drain faucet