@@ -1,3 +1,4 @@
+Pressure tab: Trapezoid scene: Moved the drain down to center the slider in the space at the bottom
 Pressure tab: Fixed: Align the "Grid" and "Ruler" Check boxes/text.  the Grid one should be moved right.
 # 0.00.49 (63149) Apr 6, 2012
 Pressure tab: Chamber scene: Fixed: Don't show dotted line on top of the mass if just removed
